modules/firefox/userContent.css
@-moz-document domain("wikipedia.org") {
    body {
        font-family: "TeX Gyre Termes", serif !important;
    }

    p {
        text-align: justify !important;
        text-justify: inter-word;
    }
}

@-moz-document domain("substack.com") {
    .single-post {
        text-align: justify;
        text-justify: inter-word;
        font-family: "Doulos SIL", "TeX Gyre Termes", serif;
    }

    .post-title,
    .subtitle {
        font-family: "Doulos SIL", "TeX Gyre Termes", serif;
    }
}

@-moz-document domain("plfa.github.io") {
    article {
        font-family: "Doulos SIL";
        text-align: justify;
    }
}

